fix: overlap issues on mobile portrait

--- a/src/styles/layouts/hp.scss
+++ b/src/styles/layouts/hp.scss
@@ -66,7 +66,7 @@
 }
 
 .arrow-box {
-  padding: 20px 16px 0;
+  padding: 16px 16px 0;
   background-color: var(--bg-secondary);
   color: var(--text-secondary);
   min-height: 240px;
@@ -75,7 +75,7 @@
 .arrow-box:nth-child(even) {
   background-color: var(--bg-primary);
   color: var(--text-primary);
-  min-height: 340px;
+  min-height: 354px;
   clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
 }
 
